# SIRVsuite

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.md  LICENCE  MANIFEST.in  README.md  README.rst  SIRV_concentration.R  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  tox.ini  wrapper.sh
.github/workflows/: python-package.yml
SIRV_suite_project/: SIRV_concentration_quantifier.py  SIRV_concentration_visualiser.py
SIRV_suite_project/jupyter_notebook/: visualize_develop.ipynb
SIRVsuite/: SIRVsuite.py  __init__.py  __main__.py  test_drawer.py
SIRVsuite/Pipeline/: countReader.py  helper.py
SIRVsuite/Resources/: ERCC92_Concentration.tsv  SIRV_isoforms_multi-fasta-annotation_190418a.gtf  SIRV_isoforms_multi-fasta_190418a.fasta.fai  igv_session.xml
Source/: SIRVsuite.py  main.py  test.py  test_drawer.py
Source/Pipeline/: countReader.py  helper.py
Source/Resources/: SIRV_isoforms_multi-fasta_190418a.fasta
docs/: Makefile  README_summary.md  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: sample_sheet_example.tsv  sample_sheet_test_SIRVset3.tsv  sample_sheet_test_SIRVset4.csv  sample_sheet_test_SIRVset4.tsv  sample_sheet_test_SIRVset4_docker.csv  sample_sheet_test_SIRVset4_docker.tsv
examples/CoD/: CoD_examples.xlsx
install/: requirements.txt  sirvsuite_env.yml
standalone/: Dockerfile  docker-compose.yml
standalone/Source/: ERCC_correlation.py  (+2 more)
tests/: __init__.py  test_coverage.py  test_drawer.py  test_parse.py  test_pipeline.py  test_run.py
(+59 files in other folders)
